cmake_minimum_required(VERSION 2.8.9)
project (spotblock)
file(GLOB SOURCES "src/*.cc")
add_executable(spotblock ${SOURCES})
set_property(TARGET spotblock PROPERTY CXX_STANDARD 14)
target_link_libraries(spotblock pulse systemd)
install(TARGETS spotblock DESTINATION bin)
if(CMAKE_INSTALL_PREFIX STREQUAL "/usr")
    install(FILES etc/spotblock.service DESTINATION /usr/lib/systemd/user)
endif()
